syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";


import "avenue/financial/protobuf/core/core_messages_description.proto";
import "avenue/financial/protobuf/product/product_messages_description.proto";



//Platform

option java_multiple_files = true;
option java_package = "com.avenue.financial.services.grpc.proto.product";
option java_outer_classname = "ProductServiceDescriptionProto";

package avenue.rms.protobuf.product;

service ProductServiceProto {

  rpc list (ListProductRequestProto) returns (ListProductResponseProto) {
  }

  rpc get (GetProductRequestProto) returns (GetProductResponseProto) {
  }


  rpc add (AddProductRequestProto) returns (AddProductResponseProto) {
  }

  rpc update (UpdateProductRequestProto) returns (UpdateProductResponseProto) {
  }

  rpc delete (DeleteProductRequestProto) returns (DeleteProductResponseProto) {
  }

}

message CountProductRequestProto {
  avenue.financial.protobuf.core.RequestParamProto param = 1;
  google.protobuf.StringValue search = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message BulkDeleteProductRequestProto {
  repeated string id = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}

message BulkDeleteProductResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  repeated avenue.financial.protobuf.product.ProductProto data = 5;
}

message CountProductResponseProto {
  int32 limit = 1;
  int32 page_number = 2;
  int32 pages_count = 3;
  int32 total_count = 4;
}

message ListProductResponseProto {
  repeated avenue.financial.protobuf.product.ProductProto data = 1;
}

message GetProductResponseProto {
  avenue.financial.protobuf.product.ProductProto data = 1;
}

message GetProductRequestProto {
  string id = 1;
  avenue.financial.protobuf.core.RequestParamProto param = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message ListProductRequestProto {
  avenue.financial.protobuf.core.RequestParamProto param = 1;
  google.protobuf.StringValue search = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}




message AddProductRequestProto {
  avenue.financial.protobuf.product.AddProductProto data = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}

message UpdateProductRequestProto {
  string id = 1;
  avenue.financial.protobuf.product.UpdateProductProto data = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message DeleteProductRequestProto {
  string id = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}


message AddProductResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.product.ProductProto data = 5;
}

message UpdateProductResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.product.ProductProto data = 5;
}

message DeleteProductResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.product.ProductProto data = 5;
}








